# Task_Manager

./: CMakeLists.txt  README.md  main.cpp
include/: pch.h
src/category/: category.cpp  category.h
src/deadline_reminders/: reminder_deadline.cpp  reminder_deadline.h
src/export/: exports_to_file.cpp  exports_to_file.h
src/factory/: factory_task.cpp  factory_task.h  high_priority_task.cpp  high_priority_task.h  long_term_task.cpp  long_term_task.h  personal_task.cpp  personal_task.h  task.cpp  task.h  task_interface.h
src/global_exception_handler/: category_exception.cpp  category_exception.h  task_exception.cpp  task_exception.h  task_manager_exception.h
src/observer/: task_events_interface.h  task_notifier.cpp  task_notifier.h  task_observer.cpp  task_observer.h  task_observer_interface.h
src/task_manager/: task_manager.cpp  task_manager.h
